--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,8 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Key related
+key.properties
+jjj_dev.jks
+deployment_cert.der
